# rocketsession

./: .gitignore  AGENTS.md  CLAUDE.md  PATCH_NOTES.md  README.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: bump-version.mjs  bundle-standalone.mjs  dev.mjs  package-portable.mjs  package-release.mjs  publish-release.mjs
src/: main.tsx  styles.css  tray.mjs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_skip.rs  logging.rs  main.rs  rl_tcp.rs  server.rs  session.rs  settings.rs  stats_api_adapter.rs  stats_config.rs
src/components/: Layout.tsx  Sidebar.tsx  TextCanvasOverlay.tsx  ThemeSwitcher.tsx  ViewShell.tsx
src/context/: ThemeContext.tsx  UpdateContext.tsx
src/hooks/: useOverlaySettings.ts
src/lib/: api.ts  stats.ts
src/server/: index.mjs
src/views/: AboutView.tsx  HistoryView.tsx  LogsView.tsx  OBSView.tsx  SessionView.tsx  SettingsView.tsx  SetupView.tsx  TrackerView.tsx
